--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,22 @@
 @import "tailwindcss";
 
+
+@layer base {
+  body {
+    @apply bg-black text-white font-sans;
+  }
+
+  a {
+    @apply text-[color:#14F195];
+  }
+
+  .wallet-adapter-button {
+    @apply font-bold rounded-md;
+    background: linear-gradient(90deg, #9945FF, #14F195);
+    color: black !important;
+  }
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -19,8 +36,3 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
